# market-analytics

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: init_db.sql
data/: market_data.parquet  sentiment_summary.parquet  speeches.parquet  speeches_with_market.parquet
src/database/: connection.py  models.py  repository.py
src/ingestion/: ecb_backfill.py  ecb_scraper.py  export_parquet.py  fed_backfill.py  fed_scraper.py  market_data.py  run_backfill.py  run_ingestion.py
src/nlp/: run_analysis.py  sentiment.py
streamlit_app/: app.py  data_loader.py  requirements.txt
streamlit_app/pages/: 1_Speaker_Analysis.py  2_Market_Impact.py
tests/test_ingestion/: test_market_data.py  test_parsers.py
tests/test_nlp/: test_sentiment.py
